# course-work

./: .gitignore  course-work.pro  grid_data_loader.cpp  grid_data_loader.h  grid_data_processor.cpp  grid_data_processor.h  grid_value_rect_item.cpp  grid_value_rect_item.h  heatmap.cpp  heatmap.h  main_window.cpp  main_window.h  menu.cpp  menu.h  player_widget.cpp  player_widget.h  plots_widget.cpp  plots_widget.h  properties_item.cpp  properties_item.h  properties_widget.cpp  properties_widget.h  resources.qrc  solution_runner.cpp  solution_runner.h
gui/: course-work.pro  grid_data_loader.cpp  grid_data_loader.h  grid_data_processor.cpp  grid_data_processor.h  heatmap.cpp  heatmap.h  main_window.cpp  main_window.h  properties_item.cpp  properties_item.h  properties_widget.cpp  properties_widget.h  resources.qrc  solution_runner.cpp  solution_runner.h
gui/resources/solver/: runner.sh  solver
qcustomplot/: qcustomplot-compilation.pro
resources/properties/: materials
resources/solver/: runner.sh
solver/: CMakeLists.txt  build.sh  column_iteration_solver.cpp  column_iteration_solver.h  main.cpp  material.cpp  material.h  properties_manager.cpp  properties_manager.h  properties_wrapper.cpp  properties_wrapper.h  row_iteration_solver.cpp  row_iteration_solver.h  solver.cpp  solver.h  solver_base.h  table_value.cpp  table_value.h  tridiagonal.cpp  tridiagonal.h
solver/explicit/: explicit_solver.cpp  explicit_solver.h  node_edge_info.h
solver/properties/: CMakeLists.txt  material.cpp  material.h  properties_manager.cpp  properties_manager.h  properties_wrapper.cpp  properties_wrapper.h  table_value.cpp
solver/semi_implicit/: CMakeLists.txt  column_iteration_solver.cpp  column_iteration_solver.h  row_iteration_solver.cpp  row_iteration_solver.h  semi_implicit_solver.cpp  semi_implicit_solver.h  tridiagonal.cpp  tridiagonal.h
solver/utils/: CMakeLists.txt  computation_grid.cpp  computation_grid.h  math.h  matrix.cpp  matrix.h  result_saver.cpp  result_saver.h  strings.cpp  strings.h  vector.cpp  vector.h
